couchbase-operator/couchbase-deployment.yaml
# Source: couchbase-operator/templates/couchbase-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couchbase-operator-couchbase-operator
  labels:
    app.kubernetes.io/name: couchbase-operator
    app.kubernetes.io/instance: couchbase-operator
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: couchbase-operator-1.0.4
  selector:
    matchLabels:
      app.kubernetes.io/name: couchbase-operator
      app.kubernetes.io/instance: couchbase-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: couchbase-operator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: couchbase-operator
    spec:
      serviceAccountName: couchbase-operator-couchbase-operator
      imagePullSecrets:
      containers:
      - name: couchbase-operator
        image: "couchbase/operator:1.2.2"
        imagePullPolicy: IfNotPresent
        command:
        - couchbase-operator
        - "--create-crd=true"
        ports:
          - name: readiness-port
            containerPort: 8080
        readinessProbe:
          httpGet:
            path: /readyz
            port: readiness-port
          initialDelaySeconds: 3
          periodSeconds: 3
          timeoutSeconds: 
          failureThreshold: 19
        resources:
            cpu: 100m
            memory: 128Mi
---
