couchbase-operator/admission-deployment.yaml
# Source: couchbase-operator/templates/admission-deployment.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: couchbase-operator-couchbase-admission-controller
webhooks:
- name: couchbase-operator-couchbase-admission-controller.default.svc
  rules:
  - apiGroups:
    - couchbase.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - couchbaseclusters
  clientConfig:
    service:
      namespace: default
      name: couchbase-operator-couchbase-admission-controller
      path: "/couchbaseclusters/validate"
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMekNDQWhlZ0F3SUJBZ0lRUHFpTGd6RGRFMTNqcWZZTk4yY0JMREFOQmdrcWhraUc5dzBCQVFzRkFEQWkKTVNBd0hnWURWUVFERXhkaFpHMXBjM05wYjI0dFkyOXVkSEp2Ykd4bGNpMWpZVEFlRncweU16RXhNRE14TVRJeApNemxhRncweU5ERXhNREl4TVRJeE16bGFNQ0l4SURBZUJnTlZCQU1URjJGa2JXbHpjMmx2YmkxamIyNTBjbTlzCmJHVnlMV05oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUF2SUxCYUxjeC8yamUKQ3NLMXVpZGgzSmZXZnBRRnhpbk9kK0RSOFBBUDZZZHUrOUZ0d2hEMG5tZHA3cUc3ZmJhZjZ2VHJVT2hRUy9Ddgp1YnVrSkFIRE83a2 [...]
